# hardbit

./: Cargo.toml  Justfile  README.md
src/: lib.rs
